# soulgraph

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: findings-v1.md  findings-v2.md  findings-v3.md  findings-v4.md  findings-v5.md  findings-v6.md  intention-abstraction-guide.md  v3-research-notes.md
docs/plans/: 2026-03-14-soulgraph-v4-design.md  2026-03-14-soulgraph-v5-design.md  2026-03-14-soulgraph-v5-implementation.md  2026-03-14-soulgraph-v6-design.md  2026-03-14-soulgraph-v6-implementation.md  2026-03-15-dual-soul-design.md  2026-03-15-dual-soul-implementation.md  2026-03-15-v3-emotional-authenticity-design.md  2026-03-15-v3-implementation-plan.md
fixtures/: anxiety_user.json  car_buyer.json  career_changer.json  gone_with_wind.jsonl  scarlett_expanded.jsonl  scarlett_full.jsonl  scarlett_intentions.json  zhang_wei.json
results/: convergence_experiment.json  exp_career_5turns.json  scarlett_extended_dialogue.json  v4_car_buyer_1run.json  v4_zhang_wei_3runs.json  v5_zhang_wei_3sessions.json  v6_zhang_wei_retrieval.json
scripts/: analyze_gwtw.py  convergence_experiment.py  dual_soul_gwtw.py  extract_with_mapping.py  faithfulness_audit.py  faithfulness_audit_v2.py  intention_comparison.py  scarlett_intention_experiment.py
soulgraph/: __main__.py  cli.py  dual_soul.py  engine.py  frameworks.py
tests/: test_comparator.py  test_detector.py  test_detector_emotional.py  test_dual_soul.py  test_engine.py  test_experiment.py  test_experiment_json_fix.py  test_frameworks.py  test_graph.py  test_models.py  test_ranking.py  test_retrieval.py  test_speaker.py
(+12 files in other folders)
